# stonks

./: .gitignore  btc_hist.json  coins.json  sampleout.json
backend/: Cargo.toml  Rocket.toml
backend/src/: api_observer.rs  coin_api.rs  db.rs  main.rs  types.rs
frontend/: babel.config.json  package-lock.json  package.json  spago.dhall  tsconfig.json  webpack.config.js
frontend/src/: ApiBindings.purs  DateTime.ISO.purs  Main.purs  Types.ts  coinApi.ts  index.tsx  prelude.ts  trie.js
frontend/src/Components/: CentralView.purs  Page.purs  Types.purs
frontend/src/components/: App.tsx  CoinGraph.tsx  CoinSearch.tsx  Dropdown.tsx  QuoteGraph.tsx  StatefulButton.tsx
frontend/static/: index.html  index.js
