[package]
name = "backend"
version = "0.1.0"
authors = ["Norman Liu <normanwuweiliu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
reqwest = "0.11.0"
serde_json = "1.0.62"
serde = "1.0.1"
mongodb = "1.2.0"
